Fixed up Code Formatting In Default Theme
Rouge formatting with the default theme is all messed up. It needed some
tweaks to make it consistent.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -288,10 +288,12 @@ aside.posted {
 /**********************************************************************/
 
 /* Code Snippets */
-code {
+code, pre {
 	font-family: $code-font;
 }
 .highlight > pre {
+	font-size: 0.8em;
+	font-family: $code-font;
 	margin: 1.5em 50px;
 	padding: 4px 8px;
 }
@@ -302,7 +304,6 @@ code {
 	margin: 0;
 }
 .rouge-table pre {
-	font-size: 0.8em;
 	padding: 0 8px;
 }
 .rouge-table td {
@@ -339,11 +340,9 @@ table th {
 }
 table th {
 	font-family: $table-header-font;
-	font-size: 0.9em;
 }
 table td {
 	font-family: $table-cell-font;
-	font-size: 0.9em;
 }
 
 /**********************************************************************/
@@ -353,7 +352,6 @@ table td {
 figure {
 	margin:1.5em auto;
 	display: block;
-	text-align:center;
 }
 
 figure figcaption {
